--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-csv
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Demo Collection LIS Student Program
+title: Black Family Magazines
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: Practicing CB CSV
 # description appears in meta tags and other locations
